Added paragraph to show ip address

--- a/site-content/index.html
+++ b/site-content/index.html
@@ -11,7 +11,7 @@
       $.getJSON("https://api.ipify.org?format=jsonp&callback=?",
         function(json) {
           myip = json.ip;
-          $("#ip-addre").text(myip);
+          $("#ip-addr").text(myip);
 
           var string = "ws://" + myip + ":8080/rates"
 
