--- a/site-content/index.html
+++ b/site-content/index.html
@@ -3,24 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Sample of websocket with golang</title>
-		<script src="jquery-1.8.3.min.js"></script>    
-
-    <script type="application/javascript">
-    var myip = 'unknown'
-     $(document).ready(function() {
-      $.getJSON("https://api.ipify.org?format=jsonp&callback=?",
-        function(json) {
-          myip = json.ip;
-          $("#ip-addr").text(myip);
-
-          var string = "ws://" + myip + ":8080/rates"
-
-          var ws = new WebSocket("ws://" + myip + ":8080/rates");
-          ws.onopen = function(e) {
-          $("#latest-rate").text("Connected");
+		<script src="jquery-1.8.3.min.js"></script>
+    <script>
+      $(function() {
+        var ws = new WebSocket("ws://104.197.95.193:8080/rates");
+        ws.onopen = function(e) {
+          $("#latest-rate").text("Welcome");
         };
         ws.onclose = function(e) {
-          $("#latest-rate").text("Disconnected");
+          $("#latest-rate").text("Dangit");
         };
         ws.onmessage = function(e) {
           rateCount += 1;
@@ -35,27 +26,11 @@
           console.log("送信メッセージ:" + data);
           $('<li>').text(data).appendTo($ul);
         });
-        }
-      );
-    });
-
-      $(function() {
-
       });
-
       var rateCount = 0;
 		</script>
-
-    <script type="application/javascript">
- 
-</script>
-
 	</head>
 	<body>
-			<!-- <input id="name" type="text" />
-			<input type="button" id="sendBtn" value="send"></input>
-      <ul id="msg-list"></ul> -->
-      <p id="ip-addr">Unknown</p>
       <p id="rate-count">None</p>
       <p id="latest-rate">None</p>
 	</body>
